# EEM5043-Smart-Home-System

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  LICENSE  README.md  idf_component.yml  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  app_driver.c  app_driver.h  app_main.c  app_priv.h  dht11.c  dht11.h  idf_component.yml  ssd1306.c  ssd1306.h
